@@ -83,7 +83,7 @@ namespace LinuxSampler {
         VMIntRelPtr  m_EVENT_ID;
         VMInt8RelPtr m_EVENT_NOTE;
         VMInt8RelPtr m_EVENT_VELOCITY;
-        //VMIntArray m_KEY_DOWN; //TODO: ...
+        VMInt8Array  m_KEY_DOWN;
         //VMIntArray m_POLY_AT; //TODO: ...
         //int m_POLY_AT_NUM; //TODO: ...
 
